@@ -1,3 +1,8 @@
+2005-02-28  Zdenek Dvorak  <dvorakz@suse.cz>
+
+	PR c++/25632
+	* g++.dg/other/pr25632.C: New test.
+
 2006-02-28  Jakub Jelinek  <jakub@redhat.com>
 
 	PR c/25682
